app2/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-vs
  namespace: istio-system
spec:
  hosts:
  - \"*\"
  gateways:
  - app2-gateway
  http:
  - route:
    - destination:
        host: app2.default.svc.cluster.local
        port:
          number: 80
